@@ -6,6 +6,8 @@ version 0.9.7 -- UNRELEASED
 	   file or in a given backup action file. Thanks Tuomas Jormola for the
 	   preliminary patch (Closes: #511299)
     handler changes
+	ldap:
+	 . Use gzip's --rsyncable option.
 	maildir:
 	 . fix location of deleted_on file
 	 . add missing destid_file options to ssh connections
@@ -20,6 +22,9 @@ version 0.9.7 -- UNRELEASED
 	   does not prevent mysqldump to work.
 	 . Fix the error message displayed when mysqld is not running:
 	   mysqladmin ping indeed returns 0 when authentication fails.
+	 . Use gzip's --rsyncable option.
+	pgsql:
+	 . Use gzip's --rsyncable option.
 	sys:
 	 . New luksheaders option (default=disabled) to backup the Luks header
 	   of every Luks device.
